# service_mailings

./: .env.sample  .gitignore  README.md  pyproject.toml
blog/: admin.py  forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_article_owner.py
blog/templates/blog/: article_confirm_delete.html  article_detail.html  article_form.html  article_list.html
blog/templates/blog/includes/: inc_button_perms.html  inc_card_article.html
client/: admin.py  forms.py  models.py  urls.py  views.py
client/migrations/: 0001_initial.py  0002_initial.py
client/templates/client/: client_confirm_delete.html  client_detail.html  client_form.html  client_list.html
config/: settings.py  urls.py
mailing/: admin.py  cron.py  forms.py  models.py  services.py  urls.py  views.py
mailing/migrations/: 0001_initial.py  0002_initial.py  0003_rename_massage_message_and_more.py  0004_alter_log_mailing.py  0005_mailing_client.py  0006_message_user.py
mailing/templates/mailing/: base.html  contacts.html  mailing_activ.html  mailing_confirm_delete.html  mailing_detail.html  mailing_form.html  mailing_list.html  mailing_main.html  message_confirm_delete.html  message_detail.html  message_form.html  message_list.html
mailing/templates/mailing/includes/: inc_img.html  inc_main_menu.html
mailing/templatetags/: my_tag.py  my_tags.py
users/: forms.py  models.py  urls.py  views.py
users/management/commands/: cron.py  fill.py
users/migrations/: 0001_initial.py
users/templates/users/: login.html  register.html  user_form.html
