[tool.poetry]
name = "andrey-fomichev-cw-6"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "andrey_fomichev_cw_6"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.5"
psycopg2-binary = "^2.9.7"
pillow = "^10.0.0"
ipython = "^8.15.0"
redis = "^5.0.0"
python-dotenv = "^1.0.0"
django-crontab = "^0.7.1"
pytils = "^0.4.1"
pytz = "^2023.3.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
